@@ -24,7 +24,11 @@ proc create_gateinspector {name} {
     set w $name
     create_inspector_toplevel $w
 
+    iconbutton $w.toolbar.sep1 -separator
     iconbutton $w.toolbar.mod -image $icons(parent) ;#command assigned from C++
+    foreach i {sep1 mod} {
+       pack $w.toolbar.$i -anchor n -side left -padx 0 -pady 2
+    }
     pack $w.toolbar.mod -anchor n -side left
 
     set help_tips($w.toolbar.mod) {Inspect owner module}
@@ -64,9 +68,11 @@ proc create_graphicalgatewindow {name} {
 
     # create toolbar
     iconbutton $w.toolbar.ascont -image $icons(asobject) -command "inspect_this $w {As Object}"
+    iconbutton $w.toolbar.sep1 -separator
     iconbutton $w.toolbar.module -image $icons(parent) ;#command assigned from C++
+    iconbutton $w.toolbar.sep2 -separator
     iconbutton $w.toolbar.redraw -image $icons(redraw) -command "graphgatewin_redraw $w"
-    foreach i {ascont module redraw} {
+    foreach i {ascont sep1 module sep2 redraw} {
        pack $w.toolbar.$i -anchor n -side left
     }
 
@@ -228,3 +234,4 @@ proc graphgatewin_rightclick {c X Y} {
       popup_insp_menu $ptr $X $Y
    }
 }
+
